--- a/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
@@ -1,7 +1,7 @@
-
-<div class="container">
-    <div class="row mt-4 mb-2 text-center d-inline-flex p-2">
-      <div class="col">
+<div class="d-inline-flex p2">
+  <div class="container">
+    <div class="row  mt-4 mb-2 text-center d-inline-flex p-2">
+      <div class="col button-div">
         <button type="button" (click)="openAdminFormModal()" class="btn btn-danger" >
           Select Admin
         </button>
@@ -9,8 +9,7 @@
       </div>
     </div>
   </div>
-   
-  
+ 
   <div
     class="modal dark"
     id="adminModal"
@@ -29,17 +28,18 @@
                 <li class="form-check" *ngFor="let panelist of panelistData" class="list">
                   <input class="form-check-input" type="Checkbox" [value]="panelist.panelist_first_name" name="admin" (change)="onCheckboxChange($event)"  formControlName="{{panelist.panelist_first_name}}">{{panelist.panelist_first_name}}
                 </li>
-                <button class="btn btn-success" type="submit">Save</button>
-            </form>
-            
+                <button class="btn btn-success" type="submit" data-bs-dismiss="modal">Save</button>
+            </form> 
         </div>
-        
       </div>
     </div>
+  </div>
+
+  <div class="display-admin" *ngFor="let item of result">
+    <ul class="d-inline-flex p2 list">
+      <li><input class="form-check-input" type="Checkbox" name="admin_data" checked></li>
+      <li>{{item}}</li>
+    </ul>
+  </div>
 </div>
 
-<div >
-  <ul *ngFor="let item of result" class="list">
-    <li><input class="form-check-input" type="Checkbox" name="admin_data" checked>{{item}}</li>
-  </ul>
-</div>
