added icons for manage and edit

--- a/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
+++ b/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
@@ -29,10 +29,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 upload-download">
-                <span><button type="button" role="button" class="btn btn-danger">Upload</button></span>
-                <span> | </span>
-                <span><button type="button" role="button" class="btn btn-danger">Download</button></span>
+            <div class="col-sm-6">
+                <div class=" upload-download">
+                    <span><button type="button" role="button" class="btn btn-danger">Upload</button></span>
+                    <span> | </span>
+                    <span><button type="button" role="button" class="btn btn-danger">Download</button></span>
+                </div>
+                
             </div>
         </div>
     </div>
