--- a/src/app/components/drive-management/hiring-drive-info/hiring-drive-info.component.html
+++ b/src/app/components/drive-management/hiring-drive-info/hiring-drive-info.component.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="container-fluid my-5" *ngFor="let drive of specificDrive">
-        {{drive | json}}
+        <!-- {{drive | json}} -->
         <div>
             <table class="table table-bordered table-striped table-hover display">
                 <thead>
