--- a/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
@@ -36,14 +36,13 @@
     </div>
   </div>
 
-  <div class="form-control d-inline-flex p-2">
+  <!-- <div class="form-control d-inline-flex p-2">
     <div class="display-admin" *ngFor="let item of result">
       <ul class="d-inline-flex p2 list">
-        <li><input class="form-check-input" type="Checkbox" name="admin_data" checked></li>
-        <li>{{item}}</li>
+        <li><input class="form-check-input" type="Checkbox" name="admin_data" checked>{{item}}</li>
       </ul>
     </div>
-  </div>
+  </div> -->
   
 </div>
 
