--- a/src/app/components/drive-management/panel-form/panel-form.component.html
+++ b/src/app/components/drive-management/panel-form/panel-form.component.html
@@ -6,7 +6,7 @@
     <div class="row mt-4 mb-2 text-center">
       <div class="col">
         <button type="button" (click)="openFormModal()" class="btn btn-danger" >
-          Add Panel
+          <span class="glyphicon glyphicon-plus-sign"></span> Add Panel
         </button>
       </div>
     </div>
