--- a/src/app/components/entity-form/entity-form.component.html
+++ b/src/app/components/entity-form/entity-form.component.html
@@ -10,7 +10,7 @@
             (click)="openEntityFormModal()"
             class="btn btn-danger"
           >
-            Add Entity
+          <span class="glyphicon glyphicon-plus-sign"></span> Add Entity
           </button>
         </div>
       </div>
@@ -109,7 +109,7 @@
               </div>
               <div class="add_remove">
                 <span class="btn btn-danger " (click)="addContact()"
-                  >Add contact +</span
+                  ><span class="glyphicon glyphicon-plus-sign"></span> Add contact </span
                 >
               </div>
 
@@ -230,7 +230,7 @@
               </div>
               <div class="add_remove">
                 <span class="btn btn-danger " (click)="addContact()"
-                  >Add contact +</span
+                  ><span class="glyphicon glyphicon-plus-sign"></span> Add contact</span
                 >
               </div>
 
