--- a/src/app/components/panelist-form/panelist-form.component.html
+++ b/src/app/components/panelist-form/panelist-form.component.html
@@ -7,7 +7,7 @@
       <div class="row mt-4 mb-2 text-center">
         <div class="col">
           <button type="button" (click)="openPanelistFormModal()" class="btn btn-danger">
-            Add Panelist
+            <span class="glyphicon glyphicon-plus-sign"></span> Add Panelist
           </button>
         </div>
       </div>
