edited the forms and remove the errors form console

--- a/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
@@ -58,7 +58,7 @@
           <div class="form-group row drive-dates" *ngFor="let obj of driveDates; let i = index">
             <div class="col-sm-3 dates-data">
               <span>
-                <select class="form-control custom-select" id="role" name="round_detail" name="round" [(ngModel)]="obj.roundName">
+                <select class="form-control custom-select" id="role" name="round" [(ngModel)]="obj.roundName">
                   <option disabled selected>Select Round</option>
                   <option value="Pre-Placement">Pre-Placement talk</option>
                   <option value="Interview Round 1">Interview Round 1</option>
