--- a/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
@@ -24,10 +24,10 @@
         </div>
 
         <div class="modal-body">
-            <form  [formGroup]="form" (ngSubmit)="getAdminData()">
-                <li class="form-check" *ngFor="let panelist of panelistData" class="list">
-                  <input class="form-check-input" type="Checkbox" [value]="panelist.panelist_first_name" name="admin" (change)="onCheckboxChange($event)"  formControlName="{{panelist.panelist_first_name}}">
-                  <label class="admin-panelist" for="panelistName">{{panelist.panelist_first_name}}</label>
+            <form #formData="ngForm" (ngSubmit)="getAdminData(formData.value)">
+                <li class="form-check" *ngFor="let item of adminArr; let i=index" class="list">
+                  <input class="form-check-input" type="Checkbox" value="item.adminName" name="admin" (change)="onCheckboxChange()" [(ngModel)]="item.isSelected">{{item.adminName}}
+                  <!-- <label class="admin-panelist" for="panelistName"></label> -->
                 </li>
                 <button class="btn btn-success" type="submit" data-bs-dismiss="modal">Save</button>
             </form> 
