--- a/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
+++ b/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
@@ -44,8 +44,8 @@
                     <span><button type="button" role="button" class="btn btn-danger" (click)="saveDataInCSV('sampleData', sampleData)"><span class="glyphicon glyphicon-download-alt"></span> Download
                     </button></span>
 
-                    <!-- <span><button type="button" role="button" class="btn btn-danger" (click)="bulkUpload()" >show data
-                    </button></span> -->
+                    <span><button type="button" role="button" class="btn btn-danger" (click)="bulkUpload()" >Store the data
+                    </button></span>
                 </div>
                 
             </div>
