--- a/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
+++ b/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
@@ -43,7 +43,7 @@
                     <span> | </span>
                     <span><button type="button" role="button" class="btn btn-danger" (click)="saveDataInCSV('sampleData', sampleData)"><span class="glyphicon glyphicon-download-alt"></span> Download
                     </button></span>
-
+                    <span> | </span>
                     <span><button type="button" role="button" class="btn btn-danger" (click)="bulkUpload()" >Store the data
                     </button></span>
                 </div>
