--- a/src/app/components/drive-management/hiring-drive-info/hiring-drive-info.component.html
+++ b/src/app/components/drive-management/hiring-drive-info/hiring-drive-info.component.html
@@ -55,22 +55,33 @@
         <table class="table table-bordered table-striped table-hover display" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
             <thead>
             <tr>
-                <th>Drive Title</th>
-                <th>Entity Name</th>
-                <th>Hiring Date</th>
-                <th>Hiring Round Date</th>
-                <th>Hiring Round Time</th>
-                <th>Hiring Round Name</th>
+                <th>Event Title</th>
+                <th>Date</th>
+                <th>Start Time</th>
+                <th>Edit</th>
             </tr>
             </thead>
-            <tbody>
-            <tr *ngFor="let drive of specificDrive">
-                <td>{{ drive.title }}</td>
-                <td>{{ drive.entity }}</td>
-                <td>{{ drive.hiring_date }}</td>
-                <td>{{ drive.round_date }}</td>
-                <td>{{ drive.round_time }}</td>
-                <td>{{ drive.round_name }}</td>
+            <tbody *ngFor="let drive of specificDrive">
+            <tr *ngFor="let item of drive.round;let i=index">
+            
+                <td>
+                    <tr >{{item['round' + i].roundName}} </tr>
+                </td>
+                <td>
+                    <tr >{{item['round' + i].roundDate}} </tr>
+                </td>
+                <td>
+                    <tr >{{item['round' + i].roundTime}} </tr>
+                </td>
+                <td class="text-center text-danger">
+                    <svg type="button" 
+                    routerLink="/hiring-drive"
+                    xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                      <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                      <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                    </svg>
+                  </td>
+
             </tr>
             </tbody>
         </table>
