--- a/src/styles.css
+++ b/src/styles.css
@@ -116,6 +116,14 @@ html, body{
     height: 140px;
 }
 
+.breadcrumb{
+    background-color: white;
+}
+
+
+.bread{
+    margin-left: 16.5%;
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
