--- a/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
+++ b/src/app/components/drive-management/manage-candidate/manage-candidate.component.html
@@ -2,7 +2,10 @@
 <app-side-bar></app-side-bar>
 
 <div class="container-fluid candidate-info">
-
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a routerLink="/drive-management">Drive Management</a></li>
+        <li class="breadcrumb-item"><a routerLink="/manage-candidate">Manage Candidate</a></li>
+      </ol>
     <div class="switch-drive">
         <label for="Drive">Switch Drive:</label>
         <select class="mx-2" id="role" name="drive" #drives ngModel (change)="getSpecificDrive(drives.value)">
