--- a/src/app/components/panelist-form/panelist-form.component.html
+++ b/src/app/components/panelist-form/panelist-form.component.html
@@ -1,6 +1,11 @@
 <app-header></app-header>
 <app-side-bar></app-side-bar>
-
+<div class="container-fluid bread">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a routerLink="/drive-management">Drive Management</a></li>
+    <li class="breadcrumb-item"><a routerLink="/panelist-form">Panelist</a></li>
+  </ol>
+</div>
 <div class="container-fluid panelist-div">
   <div class="container">
     <div class="container d-inline-flex p-2">
