--- a/src/app/components/common/side-bar/side-bar.component.html
+++ b/src/app/components/common/side-bar/side-bar.component.html
@@ -8,7 +8,7 @@
         </li>
     </ul>    
     <ng-template #driveManageStatus>
-        <ul class="nav-list" *ngIf="DriveManage || PanelFormStatus || viewDriveFormStatus || addDriveFormStatus || singledriveInfoStatus || manageCandidateStatus">
+        <ul class="nav-list" *ngIf="DriveManage || PanelFormStatus || viewDriveFormStatus || addDriveFormStatus || singledriveInfoStatus || manageCandidateStatus || managePanelistStatus">
             <div>
                 <li class="nav-list-item border-start border-light">
                     <i class="glyphicon glyphicon-th"></i>
