--- a/src/app/components/drive-management/hiring-drive-info/hiring-drive-info.component.css
+++ b/src/app/components/drive-management/hiring-drive-info/hiring-drive-info.component.css
@@ -6,14 +6,15 @@
 .description{
     width: 50%;
     float: right;
-    margin-right: -17%;
+    margin-right: 1%;
     margin-top: 5%;
     margin-bottom: 3%;
 }
 
 .switch-drive{
-    float:right;
-    margin-right: 1%;
+    /* float:right; */
+    /* margin-right: 1%; */
+    margin-left: 2%;
 }
 
 .entity-heading{
