--- a/src/app/components/panelist-form/panelist-form.component.html
+++ b/src/app/components/panelist-form/panelist-form.component.html
@@ -33,14 +33,14 @@
           </div>
   
           <div class="modal-body">
-              <form #panelistForm="ngForm" (ngSubmit)="postPanelistData(panelistForm.value)">
+              <form #panelistForm="ngForm" (ngSubmit)="postPanelistData(panelistForm)">
                 <div>
                   <div class="form-group row">
                     <div class="col-sm-3 col-form-label">
                       <label for="fname" >First Name:</label>
                     </div>
                     <div class="col-sm-9">
-                      <input class="form-control" type="text" id="fname" name="panelist_first_name" placeholder="Enter First Name" ngModel>
+                      <input class="form-control" type="text" id="firstName" name="firstName" placeholder="Enter First Name" [(ngModel)]="newPanelist.firstName">
                     </div>
                   </div>
                   
@@ -49,7 +49,7 @@
                       <label for="lname" >Last Name:</label>
                     </div>
                     <div class="col-sm-9">
-                      <input class="form-control" type="text" id="lname" name="panelist_last_name" placeholder="Enter Last Name" ngModel><br>
+                      <input class="form-control" type="text" id="lastName" name="lastName" placeholder="Enter Last Name" [(ngModel)]="newPanelist.lastName"><br>
                     </div>
                   </div>
   
@@ -58,7 +58,7 @@
                       <label for="email" ><b>Email:</b></label>
                     </div>
                     <div class="col-sm-9">
-                      <input class="form-control" type="email" placeholder="Enter Email"  name="panelist_email" id="email" required ngModel><br>
+                      <input class="form-control" type="email" placeholder="Enter Email"  name="email" id="email" required [(ngModel)]="newPanelist.email"><br>
                     </div>
                   </div>
               
@@ -67,7 +67,7 @@
                       <label for="phone" >Phone Number:</label>
                     </div>
                     <div class="col-sm-9">
-                      <input class="form-control" type="tel" id="fnum" placeholder="Enter Phone Number" name="panelist_contact" ngModel><br>
+                      <input class="form-control" type="tel" id="phone" placeholder="Enter Phone Number" name="phone" [(ngModel)]="this.newPanelist.phone_number"><br>
                     </div>
                   </div>
 
@@ -76,7 +76,7 @@
                       <label for="role" >Choose Role:</label>
                     </div>
                     <div class="col-sm-9">
-                      <select class="form-control" id="role" name="role">
+                      <select class="form-control" id="role" name="role" [(ngModel)]="this.newPanelist['custom:role']">
                         <option selected>Choose From dropdown</option>
                         <option value="admin">Admin</option>
                         <option value="panelist">Panelist</option>
